--- a/index.html
+++ b/index.html
@@ -7,23 +7,17 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <!--
-      I have checked this webpage with:
-        ->Google Chrome.
-        ->Mozilla Firefox.
-        ->Internet Explorer.
-        ->Microsoft Edge.
-    -->
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
+
     <!-- START: Main Wrapper -->
     <div class="main-wrapper">
+
+      <!-- START: header -->
       <header class="page-header">
-        <!--
-          Remove all Student Name and replace with your real name:
-          DONE
-        -->
         <h1 id="top"><a href="#">Thomas Dimnet</a></h1>
+        <img id="hamburger-img" src="img/menu.png">
         <nav class="main-nav">
           <ul>
             <li><a href="#top">Home</a></li>
@@ -186,5 +180,7 @@
       </footer>
     </div>
     <!-- END: Main Wrapper -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
