--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive-tablet.css">
+    <link rel="stylesheet" href="css/responsive-desktop.css">
   </head>
   <body>
 
@@ -45,80 +46,83 @@
 
 
       <!-- START: Student Portfolio -->
-      <section class="student-portfolio clearfix">
+      <section class="student-portfolio">
         <h2 id="portfolio">Portfolio</h2>
 
-        <section class="student-projects">
-          <img src="img/portfolio-1.png" alt="Image of the marketing page project">
-          <h3>Marketing Page</h3>
-          <p>
-            This project shows the front page of a marketing website meant for a specific business I am interested in.
-          </p>
-        </section>
+        <div id="projects">
+          <article class="student-projects">
+            <img src="img/portfolio-1.png" alt="Image of the marketing page project">
+            <h3>Marketing Page</h3>
+            <p>
+              This project shows the front page of a marketing website meant for a specific business I am interested in.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-2.png" alt="Image of the search page project">
-          <h3>Search Page</h3>
-          <p>
-            This project searches through a specific database to find information that the user is trying to look up.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-2.png" alt="Image of the search page project">
+            <h3>Search Page</h3>
+            <p>
+              This project searches through a specific database to find information that the user is trying to look up.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-3.png" alt="Image of the travel app project">
-          <h3>Travel App</h3>
-          <p>
-            This project compares travel times based on different transportation methods and tells you the best one.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-3.png" alt="Image of the travel app project">
+            <h3>Travel App</h3>
+            <p>
+              This project compares travel times based on different transportation methods and tells you the best one.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-6.png" alt="Image of the map of favorite spots project">
-          <h3>Map of Favorites Spots</h3>
-          <p>
-            This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-6.png" alt="Image of the map of favorite spots project">
+            <h3>Map of Favorites Spots</h3>
+            <p>
+              This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-5.png" alt="Image of the photo gallery project">
-          <h3>Photo Gallery</h3>
-          <p>
-            This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-5.png" alt="Image of the photo gallery project">
+            <h3>Photo Gallery</h3>
+            <p>
+              This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-4.png" alt="Image of the calculator project">
-          <h3>Calculator</h3>
-          <p>
-            Someone can enter in the numbers they want and press the big blue button to get the result.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-4.png" alt="Image of the calculator project">
+            <h3>Calculator</h3>
+            <p>
+              Someone can enter in the numbers they want and press the big blue button to get the result.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-7.png" alt="Image of the video player project">
-          <h3>Video Player</h3>
-          <p>
-            This project shows a high definition video on every possible device.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-7.png" alt="Image of the video player project">
+            <h3>Video Player</h3>
+            <p>
+              This project shows a high definition video on every possible device.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-8.png" alt="Image of the multimedia interface project">
-          <h3>Multimedia Interface</h3>
-          <p>
-            This particular project presents a complete interface to the user who can follow along each video.
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-8.png" alt="Image of the multimedia interface project">
+            <h3>Multimedia Interface</h3>
+            <p>
+              This particular project presents a complete interface to the user who can follow along each video.
+            </p>
+          </article>
 
-        <section class="student-projects">
-          <img src="img/portfolio-15.png" alt="Image of the drawing project">
-          <h3>Drawing Project</h3>
-          <p>
-            With this project the user can draw directly on the browser. It uses the canvas HTML5 tag. Give it a try!
-          </p>
-        </section>
+          <article class="student-projects">
+            <img src="img/portfolio-15.png" alt="Image of the drawing project">
+            <h3>Drawing Project</h3>
+            <p>
+              With this project the user can draw directly on the browser. It uses the canvas HTML5 tag. Give it a try!
+            </p>
+          </article>
+        </div>
+        <!-- END: Projects -->
       </section>
       <!-- END: Student Portfolio -->
 
