Break the style sheet file into multiples partials and import all of them inside main.scss

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Dimnet | Portfolio</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,800" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive-tablet.css">
     <link rel="stylesheet" href="css/responsive-desktop.css">
   </head>
