--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <h2 id="skills">Skills</h2>
           <p class="skills-quote">
             "Live as if you were to die tomorrow. Learn as if you were to live forever."<br>
-            <span>Mahatma Gandhi</span>.
+            <span>Mahatma Gandhi</span>
           </p>
           <p>
             As long as I can remember, I have always been interested in Web-Development and computer technologies. Yet I started my career with a college bachelor degree in international business and I have been working for 5 years in the music instrument business.
