--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- START: header -->
       <header class="page-header">
         <h1 id="top"><a href="#">Thomas Dimnet</a></h1>
-        <img id="hamburger-img" src="img/menu.png">
+        <img id="hamburger-img" src="img/menu.png" alt="Click here to see the menu">
         <nav class="main-nav">
           <ul>
             <li><a href="#top">Home</a></li>
